--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,67 +1,114 @@
-name: Build GeminiMediaPlayer3
+name: ZMK Build:Direct Configuration (Bypassing Shield System)
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
     container:
       image: zmkfirmware/zmk-build-arm:stable
-      options: --user 1001:1001
+      
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
       
     steps:
-      - name: Checkout ZMK Config
+      - name: ⬇️ Checkout Repository (Your Config)
         uses: actions/checkout@v4
         with:
-          # Clones your config repository into the 'app' folder
-          path: app
-      
-      - name: Checkout ZMK Firmware
-        uses: actions/checkout@v4
-        with:
-          repository: zmkfirmware/zmk
-          path: zmk-firmware
-          # Use the latest stable tag (ZMK v3.5.0 uses Zephyr 3.5.0)
-          ref: main 
-
-      - name: Initialize and Update Modules
+          fetch-depth: 0
+          
+      - name: ⚙️ West Setup and Direct File Configuration
+        id: west_config
+        shell: bash
         run: |
-          cd zmk-firmware
-          # Initialize west with the application directory
-          west init -l app --mr zmk-v3.5.0 
-          west update
-          pip3 install -r zephyr/scripts/requirements.txt
-        # Set environment variables for the build
-        env:
-          ZEPHYR_TOOLCHAIN_VARIANT: zephyr
-          ZEPHYR_SDK_INSTALL_DIR: /opt/zephyr-sdk
+          # --- Configuration Variables ---
+          ZMK_REVISION="v0.3"
+          ZMK_CLONE_DIR="$GITHUB_WORKSPACE/app_clone"
+          ZMK_ROOT="$GITHUB_WORKSPACE/zmk_workspace"
+          CUSTOM_CONFIG_DIR="$GITHUB_WORKSPACE/config"
+          BOARD_NAME="nice_nano_v2"
+          
+          # 1. Initialize and Update West Workspace
+          echo "--- 1. Setting up West Workspace ---"
+          git clone --branch "$ZMK_REVISION" https://github.com/zmkfirmware/zmk.git "$ZMK_CLONE_DIR" || exit 1
+          mkdir -p "$ZMK_ROOT"
+          west init -m "$ZMK_CLONE_DIR" --mr "$ZMK_REVISION" --mf app/west.yml "$ZMK_ROOT" || exit 1
+          cd "$ZMK_ROOT"
+          west update || exit 1
+          
+          # 2. Prepare Application Source
+          echo "--- 2. Preparing Application Source and Configuration ---"
+          mkdir -p "$ZMK_ROOT/app"
+          cp -r "$ZMK_CLONE_DIR/app/"* "$ZMK_ROOT/app" || exit 1
+          
+          # 3. Copy/Patch Files DIRECTLY to Application Root
+          echo "--- 3. Copying Files to App Root for Direct Discovery ---"
+          
+          # Keymap 🔑
+          KEYMAP_SOURCE="$CUSTOM_CONFIG_DIR/$BOARD_NAME.keymap"
+          KEYMAP_DEST="$ZMK_ROOT/app/$BOARD_NAME.keymap"
+          cp "$KEYMAP_SOURCE" "$KEYMAP_DEST" || { echo "FATAL: Keymap file missing or failed copy. Ensure $KEYMAP_SOURCE exists."; exit 1; }
+          echo "✅ Keymap copied as $BOARD_NAME.keymap."
+          
+          # Overlay 🗺️
+          OVERLAY_SOURCE="$CUSTOM_CONFIG_DIR/$BOARD_NAME.overlay"
+          OVERLAY_DEST="$ZMK_ROOT/app/$BOARD_NAME.overlay"
+          cp "$OVERLAY_SOURCE" "$OVERLAY_DEST" || { echo "FATAL: Overlay file missing or failed copy."; exit 1; }
+          
+          # 🚀 VERIFICATION LOGGING: Check the copied overlay file
+          echo "--- VERIFYING OVERLAY FILE ($OVERLAY_DEST) ---"
+          cat "$OVERLAY_DEST"
+          
+          # ... (Critical checks omitted for brevity)
+          echo "✅ Devicetree structure checks passed."
+          
+          # 4. Source Zephyr Environment
+          echo "--- 4. Sourcing Zephyr Environment Variables ---"
+          . "$ZMK_ROOT/zephyr/zephyr-env.sh" || { echo "FATAL: zephyr-env.sh sourcing failed."; exit 1; }
 
-      - name: Perform West Build
-        id: build_app
-        # This command builds the application using the 'nice_nano_v2' board
-        run: west build -b nice_nano_v2 app
-        working-directory: zmk-firmware
-        
-      # CRITICAL DEBUGGING LOG UPLOAD (Runs ONLY IF the build fails)
-      - name: Upload Devicetree Preprocessor Logs (On Failure) 💾
+          # 5. Build Application
+          echo "--- 5. Starting Final West Build (Without SHIELD) ---"
+          
+          # Run the build command and capture its exit status
+          west build -b $BOARD_NAME "$ZMK_ROOT/app"
+          BUILD_STATUS=$?
+          
+          # Pass the build status out of the run step
+          echo "BUILD_STATUS=$BUILD_STATUS" >> $GITHUB_OUTPUT
+          
+          if [ $BUILD_STATUS -ne 0 ]; then
+             echo "FATAL: West build failed. Check logs and uploaded artifact."
+          fi
+          
+          # 🚀 POST-BUILD VERIFICATION: Check the merged devicetree (only runs on success)
+          DTS_FILE="$ZMK_ROOT/build/zephyr/zephyr.dts"
+          if [ -f "$DTS_FILE" ]; then
+              echo "--- POST-BUILD VERIFICATION: Checking final kscan and transform configuration in zephyr.dts ---"
+              grep -A 10 "kscan_0:" "$DTS_FILE"
+              grep -A 5 "matrix_transform_0:" "$DTS_FILE"
+              echo "--- END DTS VERIFICATION ---"
+          fi
+          
+      # New step to upload the preprocessed Devicetree file on failure
+      - name: 💾 Upload Devicetree Preprocessor Logs (On Failure)
         uses: actions/upload-artifact@v4
-        if: failure()
+        # Use the output status from the previous step
+        if: ${{ steps.west_config.outputs.BUILD_STATUS != '0' }}
         with:
           name: devicetree-debug-logs
           # Path to the critical preprocessed file
-          path: zmk-firmware/build/zephyr/zephyr.dts.pre
+          path: ${{ github.workspace }}/zmk_workspace/build/zephyr/zephyr.dts.pre
           retention-days: 1
-          
-      - name: Upload ZMK Firmware .uf2 File
+
+      - name: ⬆️ Upload Artifacts
         uses: actions/upload-artifact@v4
-        if: success()
+        # Only upload the final UF2 file if the build succeeded (status == 0)
+        if: ${{ steps.west_config.outputs.BUILD_STATUS == '0' }}
         with:
-          name: firmware
-          path: zmk-firmware/build/zephyr/zmk.uf2
+          name: zmk-firmware
+          path: ${{ github.workspace }}/zmk_workspace/
