--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: ZMK Build:Direct Configuration (Bypassing Shield System)
+name: ZMK Build:Direct Configuration (Stable CI)
 
 on:
   push:
@@ -21,61 +21,61 @@ jobs:
         with:
           fetch-depth: 0
           
-      - name: ⚙️ West Setup and File Configuration
-        id: west_setup
+      - name: 🚀 Setup, Build, and Log Collection
+        id: build_all
         shell: bash
+        # Run everything from the default $GITHUB_WORKSPACE (where the code was checked out)
         run: |
           # --- Configuration Variables ---
           ZMK_REVISION="v0.3"
-          ZMK_CLONE_DIR="./app_clone"
-          ZMK_ROOT="./zmk_workspace"
-          CUSTOM_CONFIG_DIR="./config"
+          BOARD_NAME="nice_nano_v2"
           
-          # 1. Initialize and Update West Workspace
-          git clone --branch "$ZMK_REVISION" https://github.com/zmkfirmware/zmk.git "$ZMK_CLONE_DIR" || exit 1
-          mkdir -p "$ZMK_ROOT"
-          west init -m "$ZMK_CLONE_DIR" --mr "$ZMK_REVISION" --mf app/west.yml "$ZMK_ROOT" || exit 1
-          
-          # Change to the ZMK root directory
-          cd "$ZMK_ROOT" || exit 1
+          # 1. Initialize West Workspace in the current directory
+          echo "--- 1. Setting up West Workspace ---"
+          west init -l . --mr "$ZMK_REVISION"
           west update || exit 1
           
-          # 2. Prepare Application Source and Copy Config
-          mkdir -p "app"
-          cp -r "$ZMK_CLONE_DIR/app/"* "app" || exit 1
-          cp -r "$CUSTOM_CONFIG_DIR"/* "app/"
+          # 2. Copy/Prepare Files
+          echo "--- 2. Preparing Application Source and Configuration ---"
+          # The app folder is created here and contains the original ZMK application source
+          cp -r ./zmk/app/* ./app/
+          
+          # Copy your custom config files (keymap/overlay) to the app root
+          cp -r ./config/* ./app/
           
           # 3. Source Zephyr Environment
-          . "./zephyr/zephyr-env.sh" || { echo "FATAL: zephyr-env.sh sourcing failed."; exit 1; }
+          echo "--- 3. Sourcing Zephyr Environment Variables ---"
+          . "./zmk/zephyr/zephyr-env.sh" || { echo "FATAL: zephyr-env.sh sourcing failed."; exit 1; }
+
+          # 4. Perform West Build and Capture Status
+          echo "--- 4. Starting Final West Build ---"
+          # Build from the current directory, targeting the 'app' folder
+          west build -b $BOARD_NAME ./app
           
-        # Set the working directory for the subsequent build step
-        working-directory: ${{ github.workspace }}/zmk_workspace
-
-      - name: 5. Perform West Build
-        id: build_app
-        shell: bash
-        run: |
-          echo "--- 5. Starting Final West Build ---"
-          west build -b nice_nano_v2 app
-        # IMPORTANT: Allow workflow to continue to logging step even if this fails
-        continue-on-error: true
-
-      # CRITICAL DEBUGGING LOG UPLOAD
+          BUILD_STATUS=$?
+          
+          # Pass build status to be used by subsequent steps
+          echo "BUILD_STATUS=$BUILD_STATUS" >> $GITHUB_OUTPUT
+          
+          if [ $BUILD_STATUS -ne 0 ]; then
+             echo "FATAL: West build failed. Log upload will proceed."
+          fi
+          
+      # 💾 Upload Devicetree Preprocessor Logs (On Failure)
       - name: 💾 Upload Devicetree Preprocessor Logs (On Failure)
         uses: actions/upload-artifact@v4
-        # FIX: Executes always, but the contents are only available if the build step failed.
-        # We must rely on the overall step status, not a shell variable.
-        if: ${{ always() }}
+        if: ${{ steps.build_all.outputs.BUILD_STATUS != '0' }}
         with:
           name: devicetree-debug-logs
-          # Use the stable workspace path
-          path: ${{ github.workspace }}/zmk_workspace/build/zephyr/zephyr.dts.pre
+          # Path uses the standard './build' directory relative to the current workspace
+          path: ${{ github.workspace }}/build/zephyr/zephyr.dts.pre
           retention-days: 1
 
+      # ⬆️ Upload Final Artifacts (Runs on Success)
       - name: ⬆️ Upload Final Artifacts
         uses: actions/upload-artifact@v4
-        # Only upload the UF2 file if the build succeeded
-        if: ${{ success() }}
+        if: ${{ steps.build_all.outputs.BUILD_STATUS == '0' }}
         with:
           name: zmk-firmware
-          path: ${{ github.workspace }}/zmk_workspace/build/zephyr/zmk.uf2
+          # Path uses the standard './build' directory
+          path: ${{ github.workspace }}/build/zephyr/zmk.uf2
