--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,32 +24,46 @@ jobs:
       - name: 🚀 Setup, Build, and Log Collection
         id: build_all
         shell: bash
-        # Run everything from the default $GITHUB_WORKSPACE (where the code was checked out)
         run: |
           # --- Configuration Variables ---
           ZMK_REVISION="v0.3"
+          # Clone ZMK and initialize West directly inside it
+          ZMK_DIR="./zmk" 
+          CUSTOM_CONFIG_DIR="./config"
           BOARD_NAME="nice_nano_v2"
           
-          # 1. Initialize West Workspace in the current directory
+          # 1. Clone ZMK and Initialize West
           echo "--- 1. Setting up West Workspace ---"
-          west init -l . --mr "$ZMK_REVISION"
+          # Clone the ZMK repository containing the manifest file
+          git clone --branch "$ZMK_REVISION" https://github.com/zmkfirmware/zmk.git "$ZMK_DIR" || exit 1
+
+          # Change directory to the cloned ZMK directory
+          cd "$ZMK_DIR" || exit 1
+          
+          # Initialize west with the local manifest (app/west.yml)
+          west init -l app || exit 1
           west update || exit 1
           
-          # 2. Copy/Prepare Files
+          # 2. Prepare Application Source and Copy Config
           echo "--- 2. Preparing Application Source and Configuration ---"
-          # The app folder is created here and contains the original ZMK application source
-          cp -r ./zmk/app/* ./app/
-          
+          # Create and copy the ZMK app source to the workspace root
+          mkdir -p "$GITHUB_WORKSPACE/app"
+          cp -r ./app/* "$GITHUB_WORKSPACE/app/" || exit 1
+
           # Copy your custom config files (keymap/overlay) to the app root
-          cp -r ./config/* ./app/
+          cp -r "$GITHUB_WORKSPACE/$CUSTOM_CONFIG_DIR"/* "$GITHUB_WORKSPACE/app/"
+          
+          # Return to the root workspace for subsequent commands
+          cd "$GITHUB_WORKSPACE" || exit 1 
           
           # 3. Source Zephyr Environment
           echo "--- 3. Sourcing Zephyr Environment Variables ---"
-          . "./zmk/zephyr/zephyr-env.sh" || { echo "FATAL: zephyr-env.sh sourcing failed."; exit 1; }
+          . "$ZMK_DIR/zephyr/zephyr-env.sh" || { echo "FATAL: zephyr-env.sh sourcing failed."; exit 1; }
 
           # 4. Perform West Build and Capture Status
           echo "--- 4. Starting Final West Build ---"
-          # Build from the current directory, targeting the 'app' folder
+          
+          # Build from the current workspace root, targeting the 'app' folder
           west build -b $BOARD_NAME ./app
           
           BUILD_STATUS=$?
