--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,90 +1,37 @@
-name: ZMK Build:Direct Configuration (Final Debug)
+#include <dt-bindings/zmk/matrix_transform.h>
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  workflow_dispatch:
+/ {
+    chosen {
+        zmk,kscan = &kscan_0;
+        zmk,matrix-transform = &matrix_transform_0;
+    };
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    container:
-      image: zmkfirmware/zmk-build-arm:stable
-    permissions:
-      contents: read
-      
-    steps:
-      - name: ⬇️ Checkout Repository (Your Config)
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          
-      - name: 🚀 West Setup, Build, and Log Capture
-        id: build_run
-        shell: bash
-        run: |
-          # --- Configuration Variables ---
-          ZMK_REVISION="v0.3"
-          ZMK_CLONE_DIR="$GITHUB_WORKSPACE/app_clone"
-          ZMK_ROOT="$GITHUB_WORKSPACE/zmk_workspace"
-          CUSTOM_CONFIG_DIR="$GITHUB_WORKSPACE/config"
-          BOARD_NAME="nice_nano_v2"
-          
-          # 1. Initialize and Update West Workspace (Your Original, Working Logic)
-          echo "--- 1. Setting up West Workspace ---"
-          git clone --branch "$ZMK_REVISION" https://github.com/zmkfirmware/zmk.git "$ZMK_CLONE_DIR" || exit 1
-          mkdir -p "$ZMK_ROOT"
-          
-          # FIX: Your original west init command that successfully sets up the Zephyr environment
-          west init -m "$ZMK_CLONE_DIR" --mr "$ZMK_REVISION" --mf app/west.yml "$ZMK_ROOT" || exit 1
-          
-          cd "$ZMK_ROOT" || exit 1
-          west update || exit 1
-          
-          # 2. Prepare Application Source and Copy Config
-          echo "--- 2. Preparing Application Source and Configuration ---"
-          mkdir -p "$ZMK_ROOT/app"
-          cp -r "$ZMK_CLONE_DIR/app/"* "$ZMK_ROOT/app" || exit 1
-          
-          # Copy custom files
-          cp "$CUSTOM_CONFIG_DIR/$BOARD_NAME.keymap" "$ZMK_ROOT/app/$BOARD_NAME.keymap" || exit 1
-          cp "$CUSTOM_CONFIG_DIR/$BOARD_NAME.overlay" "$ZMK_ROOT/app/$BOARD_NAME.overlay" || exit 1
-          
-          # 3. Source Zephyr Environment (Your Original Working Logic)
-          echo "--- 3. Sourcing Zephyr Environment Variables ---"
-          . "$ZMK_ROOT/zephyr/zephyr-env.sh" || { echo "FATAL: zephyr-env.sh sourcing failed."; exit 1; }
+    kscan_0: kscan_0 {
+        compatible = "zmk,kscan-gpio-matrix";
+        label = "KSCAN_0";
+        
+        // CRITICAL FIX: Use explicit &gpio0 and multi-line V2 format for maximum parse stability.
+        // Pin numbering remains Arduino (2, 4, 6, 18).
+        row-gpios = <&gpio0 2>,
+                    <&gpio0 4>,
+                    <&gpio0 6>;
+                    
+        col-gpios = <&gpio0 18>;
+        
+        // Define the pull states separately using V2 properties.
+        row-pull-downs; // Active High Rows require pull-downs
+        col-pull-ups;   // Active Low Columns require pull-ups
+    };
 
-          # 4. Perform West Build and Capture Status
-          echo "--- 4. Starting Final West Build ---"
-          
-          # Run build, capture exit status, but DO NOT exit the step yet (for logging)
-          west build -b $BOARD_NAME "$ZMK_ROOT/app"
-          BUILD_STATUS=$?
-          
-          # Pass build status to be used by subsequent steps
-          echo "BUILD_STATUS=$BUILD_STATUS" >> $GITHUB_OUTPUT
-          
-          if [ $BUILD_STATUS -ne 0 ]; then
-             echo "FATAL: West build failed. Log upload will proceed."
-          fi
-          
-      # 💾 Upload Devicetree Preprocessor Logs (On Failure)
-      - name: 💾 Upload Devicetree Preprocessor Logs (On Failure)
-        uses: actions/upload-artifact@v4
-        # CRITICAL FIX: Executes only if the build step failed (BUILD_STATUS != 0)
-        if: ${{ steps.build_run.outputs.BUILD_STATUS != '0' }}
-        with:
-          name: devicetree-debug-logs
-          # Use the path defined by your original working logic
-          path: ${{ github.workspace }}/zmk_workspace/build/zephyr/zephyr.dts.pre
-          retention-days: 1
+    matrix_transform_0: matrix_transform_0 {
+        compatible = "zmk,matrix-transform";
+        rows = <1>;
+        columns = <3>;
+        map = <ZMK_MATRIX_TRANSFORM_ROW_COLUMN_MAP(0, 0) ZMK_MATRIX_TRANSFORM_ROW_COLUMN_MAP(1, 0) ZMK_MATRIX_TRANSFORM_ROW_COLUMN_MAP(2, 0)>;
+    };
 
-      - name: ⬆️ Upload Final Artifacts
-        uses: actions/upload-artifact@v4
-        # Only upload the UF2 file if the build succeeded (BUILD_STATUS == 0)
-        if: ${{ steps.build_run.outputs.BUILD_STATUS == '0' }}
-        with:
-          name: zmk-firmware
-          path: ${{ github.workspace }}/zmk_workspace/build/zephyr/zmk.uf2
+    // Peripheral fix included
+    &led_strip {
+        status = "disabled";
+    };
+};
