--- a/config/prj.conf
+++ b/config/prj.conf
@@ -1,27 +1,17 @@
-# -----------------------------
-# USB / BLE settings
-# -----------------------------
-CONFIG_ZMK_USB=y
-CONFIG_ZMK_USB_HID=y
-CONFIG_ZMK_USB_DEVICE_STACK=y
-CONFIG_ZMK_USB_HID_KEYBOARD=y
-CONFIG_ZMK_BLE=y
-CONFIG_ZMK_BLE_PERIPHERAL=y
-
-# -----------------------------
-# Keymap and behaviors
-# -----------------------------
+# Core ZMK settings
 CONFIG_ZMK_KEYMAP=y
+CONFIG_ZMK_MATRIX=y
+
+# Only enable key_press behavior
 CONFIG_ZMK_BEHAVIOR_KEY_PRESS=y
 
-# Disable unused behaviors to avoid DEVICE_NAME length issues
+# Disable all other behaviors to avoid build issues
 CONFIG_ZMK_BEHAVIOR_MOMENTARY_LAYER=n
 CONFIG_ZMK_BEHAVIOR_KEY_REPEAT=n
 CONFIG_ZMK_BEHAVIOR_MOD_MORPH=n
 CONFIG_ZMK_BEHAVIOR_CAPS_WORD=n
+CONFIG_ZMK_BEHAVIOR_TOGGLE_LAYER=n
 
-# -----------------------------
-# Matrix / scanning
-# -----------------------------
-CONFIG_ZMK_KSCAN_GPIO=y
-CONFIG_ZMK_MATRIX_TRANSFORM=y
+# Optional: logging for debugging
+CONFIG_LOG=y
+CONFIG_LOG_DEFAULT_LEVEL=3
