--- a/config/prj.conf
+++ b/config/prj.conf
@@ -1,4 +1,8 @@
-# Core ZMK settings
-CONFIG_ZMK_KEYMAP=y
-CONFIG_ZMK_USB=y
-CONFIG_ZMK_LOG_LEVEL=3
+CONFIG_USB=y
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_BT=y
+CONFIG_BT_PERIPHERAL=y
+CONFIG_SERIAL=y
+CONFIG_HID_CONSUMER=y
+CONFIG_LOG=y
+CONFIG_LOG_DEFAULT_LEVEL=3
